force-app/main/default/objects/Registration_Course__c/Registration_Course__c.object-meta.xml
<CustomObject>
    <label>Registration Course</label>
    <nameField>
        <displayFormat>CID-{000000}</displayFormat>
        <label>Course ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>