force-app/main/default/objects/Registration_Course__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Class Completion Date</description>
    <inlineHelpText>Enter Class Completion Date</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>