force-app/main/default/objects/Registration_Course__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>Course name for FLC Class</description>
    <inlineHelpText>Enter Course Name</inlineHelpText>
    <label>Course Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>