force-app/main/default/objects/Registration_Course__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Class Expiration Date</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>