force-app/main/default/objects/Registration_Course__c/fields/Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Completed__c</fullName>
    <description>Class Hours Completed for Farm Labor</description>
    <inlineHelpText>Enter Class hours completed</inlineHelpText>
    <label>Hours Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>