force-app/main/default/objects/Registration_Course__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Class Notes by Instructor</description>
    <inlineHelpText>Enter Notes</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>