force-app/main/default/objects/Registration_Course__c/fields/Other_Language__c.field-meta.xml
<CustomField>
    <fullName>Other_Language__c</fullName>
    <description>Class taken in Other Language besides English and Spanish for Farm labor</description>
    <inlineHelpText>Enter Other Language</inlineHelpText>
    <label>Other Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>