force-app/main/default/objects/Registration_Course__c/fields/Training_Organization__c.field-meta.xml
<CustomField>
    <fullName>Training_Organization__c</fullName>
    <description>Used in FLC to enter Name of the Training Organization for FLC class training</description>
    <inlineHelpText>Enter Name of Training Organization</inlineHelpText>
    <label>Training Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>