force-app/main/default/objects/Registration_Course__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Instructor User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registration_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>